src/main/java/model/parser/analizadorSintactico.jj
options {
    STATIC = false;
}


PARSER_BEGIN(AnalizadorSintactico)

public class AnalizadorSintactico {
    public boolean chequear() {
		boolean ok;
        try {
            S();
			ok = true;
        } catch (Throwable e) {
            // Catching Throwable is ugly but JavaCC throws Error objects!
			ok = false;
            //System.out.println(e.getMessage());
        }
		return ok;
    }
}

PARSER_END(AnalizadorSintactico)

SKIP:  { " " | "\t" | "\n" | "\r" }
TOKEN: { "(" | ")" | "+" | "*" | "-" | "/" | "<" | ">" | "[" | "]" |
		< NUM : (("-")? ["0"-"9"])+ ("." (["0"-"9"])+)? > |
		< CUENTA : "[" <ID> "]" > |
		< INDICADOR : "<" <ID> ">" > |
		< #ID: ( ["A"-"Z"] | ["0"-"9"] ) ( " " | ["A"-"Z"] | ["0"-"9"] )* >
		}		


void S(): {} { E() <EOF>           }
void E(): {} { T() ( ("+" | "-") T())*      }
void T(): {} { F() ( ("*" | "/") F())*      }
void F(): {} { <NUM> | <CUENTA> | <INDICADOR> | "(" E() ")" }
